uto_carousel 7.x-1.8
--------------------
- Fixed bug where field settings summary was being returned as array instead of string
- Added flexslider dependency