@@ -1,19 +1,0 @@
-/**
- * Created by bgronek on 11/7/14.
- */
-
-// Web Standards - Webspark FlexSlider
-/*
-jQuery(window).load(function(){
-    jQuery('.flexslider-ws').flexslider({
-        animation: "slide",
-        animationLoop: true,
-        controlsContainer: jQuery('#flex-controls-ws'),
-        controlNav: false,
-        directionNav: true,
-        slideshow: true,
-        slideshowSpeed: 7000,
-        randomize: true,
-        startAt: 0 // Could add a random number here to start at
-    });
-});*/
