@@ -2,7 +2,7 @@ name = ASU Webspark Carousel
 description = Adds the option of a content carousel of formatted text and images
 core = 7.x
 package = ASU Webspark
-version = 7.x-1.8
+version = 7.x-1.9
 project = uto_carousel
 dependencies[] = ctools
 dependencies[] = defaultconfig
@@ -14,7 +14,7 @@ dependencies[] = flexslider
 scripts[] = js/jquery.flexslider-min.js
 scripts[] = js/webspark_carousel.js
 stylesheets[all][] = css/webspark_carousel.css
-explanation = Field type(s) in use - see <a href="/oklahoma7/admin/reports/fields">Field list</a>
+explanation = Field type(s) in use - see <a href="/admin/reports/fields">Field list</a>
 features[ctools][] = strongarm:strongarm:1
 features[defaultconfig][] = field_default_fields:fieldable_panels_pane-uto_carousel-field_items
 features[defaultconfig][] = user_default_permissions:create fieldable uto_carousel
